Fix: overflow: hidden 수정

--- a/frontend/src/Common.css
+++ b/frontend/src/Common.css
@@ -19,8 +19,7 @@ img {
     object-fit:cover;
 }
 
-.backdrop { 
-    overflow: hidden;
+.backdrop {
     position: relative;
     z-index: 0;
     background-color: #F8F8F8F8;
