--- a/frontend/src/StartPage.css
+++ b/frontend/src/StartPage.css
@@ -1,3 +1,15 @@
+.background {
+    overflow: hidden;
+    position: relative;
+    z-index: 0;
+    background-color: #F8F8F8F8;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    border-radius: 0px;
+}
+
 .row {
     position: absolute;
     top: 35vh;
